# laboratory

./: .gitattributes  .gitignore  LEARNING_PATH.md  README.md  package-lock.json  pyproject.toml
advanced/complex-networks/: neo4j-graph-datascience.ipynb
advanced/embeddings/: categorical-embeddings.ipynb  categorical_encoder.pkl  categorical_textual.ipynb  simple-case.ipynb
advanced/experimental/: neo4j.ipynb
advanced/gradient-descent/: gradient-descent.ipynb
advanced/graph-neural-networks/: entity-resolution.md  gnn_profile_matching.tsx  person_profile_matching_gnn.py
advanced/pycaret/: pycatet.ipynb
advanced/pyspark+sklearn/: pyspark_pandas_udf_sklearn.ipynb
boston-houses/: linear_rergression.ipynb
brazilian-stock-analysis/: Stock_diversification_analysis.ipynb  status-invest.ipynb
business-cases/brazilian-stock-analysis/: fundamentus-analysis.ipynb  (+2 more)
churn/: exploratory_data_analysis.ipynb  thresholds_to_make_better_business_decisions.ipynb  train_ml_all.csv
classification/: adaboost.ipynb  decision trees.ipynb  naive bayes - gaussian.ipynb  regressao logistica.ipynb
clustering/: K-means.ipynb  mean shift.ipynb
disney/: clock.py
embeddings/: categorical-embeddings.ipynb  categorical_textual.ipynb  crime_event_embedding_analyzer.pth  embeddings_similarity.ipynb  encoders.pkl  pyproject.toml
exponential-backoff/: tenacity.ipynb
feature-selection/: feature selection.ipynb
gradient-descent/: gradient-descent.ipynb
iris/: clustering.ipynb
linear-algebra/: 01-linear-algebra.ipynb  README.md  eigenvectors-eigenvalues.ipynb
linear-regression/: linear-regression.ipynb
marketing-campaign/: challenge.ipynb
mip/: call-center.ipynb
projects/hugby-fantasy/: .dockerignore  .env-template  .pre-commit-config.yaml  Dockerfile  README.md  justfile  params.yml  pyproject.toml  ruff.toml
projects/hugby-fantasy/notebooks/: extract-data.ipynb  model.ipynb
projects/hugby-fantasy/sql/: .sqlfluff
projects/hugby-fantasy/tests/: test_my_module.py
reduction-dimensionality/: LDA.ipynb  PCA.ipynb
regression/: regressão polinomial.ipynb
trademe/: pyproject.toml
trademe/notebooks/: twitter.ipynb
(+82 files in other folders)
