[project]
name = "laboratory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mip>=1.15.0",
    "neo4j>=5.28.2",
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "torch>=2.2.0",
    "torch-geometric>=2.4.0",
    "transformers>=4.36.0",
    "torchvision>=0.23.0",
    "pillow>=11.3.0",
    "fastai>=2.8.5",
    "directory-tree>=1.0.0",
    "matplotlib>=3.10.6",
    "optuna>=4.6.0",
    "torchmetrics>=1.8.2",
    "dlai-grader>=2.1.0",
]

[tool.setuptools]
packages = ["advanced", "foundations", "projects", "miscelaneous"]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
