[tool.poetry]
name = "trademe"
version = "0.1.0"
description = ""
authors = ["Altieris Peixoto <altieris.peixoto@parrotanalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scrapy = "^2.7.1"
pendulum = "^2.1.2"
pandas = "^1.5.2"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
